--- a/scons/configs/build.cnf
+++ b/scons/configs/build.cnf
@@ -15,4 +15,4 @@ shutit.core.module.allowed_images:["debian.*","imiell/sd_.*"]
 
 # Aspects of build process
 [build]
-base_image:imiell/sd_libxml2
+base_image:imiell/sd_docbookxsl
