--- a/vim/configs/build.cnf
+++ b/vim/configs/build.cnf
@@ -7,7 +7,7 @@
 ###############################################################################
 # When this module is the one being built, which modules should be built along with it by default?
 # This feeds into automated testing of each module.
-[shutit.tk.sd.sqlite.sqlite]
+[shutit.tk.sd.vim.vim]
 shutit.core.module.build:yes
 # Allowed images as a regexp, eg ["ubuntu:12.*"], or [".*"], or ["centos"].
 # It's recommended this is locked down as far as possible.
@@ -15,4 +15,4 @@ shutit.core.module.allowed_images:["debian.*","imiell/sd_.*"]
 
 # Aspects of build process
 [build]
-base_image:imiell/sd_setup
+base_image:imiell/sd_ncurses
