--- a/yacc/configs/build.cnf
+++ b/yacc/configs/build.cnf
@@ -7,12 +7,12 @@
 ###############################################################################
 # When this module is the one being built, which modules should be built along with it by default?
 # This feeds into automated testing of each module.
-[shutit.tk.sd.less.less]
+[shutit.tk.sd.yacc.yacc]
 shutit.core.module.build:yes
 # Allowed images as a regexp, eg ["ubuntu:12.*"], or [".*"], or ["centos"].
 # It's recommended this is locked down as far as possible.
-shutit.core.module.allowed_images:["debian.*","imiell/sd_.*"]
+shutit.core.module.allowed_images:["imiell/sd_.*"]
 
 # Aspects of build process
 [build]
-base_image:imiell/sd_bison
+base_image:imiell/sd_?
