--- a/java_binary/configs/push.cnf
+++ b/java_binary/configs/push.cnf
@@ -10,7 +10,7 @@
 rm:false
 
 [repository]
-name:java_binary
+name:sd_java_binary
 # COPY THESE TO YOUR ~/.shutit/config FILE AND FILL OUT ITEMS IN CAPS
 #user:YOUR_USERNAME
 ## Fill these out in server- and username-specific config (also in this directory)
