--- a/yacc/configs/build.cnf
+++ b/yacc/configs/build.cnf
@@ -11,8 +11,8 @@
 shutit.core.module.build:yes
 # Allowed images as a regexp, eg ["ubuntu:12.*"], or [".*"], or ["centos"].
 # It's recommended this is locked down as far as possible.
-shutit.core.module.allowed_images:["imiell/sd_.*"]
+shutit.core.module.allowed_images:["debian.*","imiell/sd_.*"]
 
 # Aspects of build process
 [build]
-base_image:imiell/sd_?
+base_image:imiell/sd_setup
