--- a/tls/configs/build.cnf
+++ b/tls/configs/build.cnf
@@ -15,4 +15,4 @@ shutit.core.module.allowed_images:["debian.*","imiell/sd_.*"]
 
 # Aspects of build process
 [build]
-base_image:imiell/sd_setup
+base_image:imiell/sd_nettle
